aws-vpc.tf
resource "aws_vpc" "terra_vpc" {
  cidr_block           = "10.10.0.0/16"
  enable_dns_hostnames = true
  enable_dns_support   = true
  tags = {
    Name = "Terraform Test"
  }
}
